--- a/xonsh/ply/Makefile
+++ b/xonsh/ply/Makefile
@@ -5,4 +5,13 @@ test:
 	cd test && $(PYTHON) testyacc.py
 
 wheel:
-	$(PYTHON
+	$(PYTHON) setup.py bdist_wheel
+
+sdist:
+	$(PYTHON) setup.py sdist
+
+upload: wheel sdist
+	$(PYTHON) setup.py bdist_wheel upload
+	$(PYTHON) setup.py sdist upload
+
+.PHONY: test wheel sdist upload
